Fix font sizes on mobile.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,6 +50,9 @@ html, body {
   margin: 0;
   padding: 0;
 }
+body {
+  font-size: 1em;
+}
 h1, h2, h3, h4, h5, p, ul, ol {
   margin: 0;
   padding-bottom: 20px;
@@ -64,10 +67,7 @@ h2 {
   font-size: 1.5em;
 }
 h3 {
-  size: 1.25em;
-}
-p, h4, h5 {
-  size: 1em;
+  font-size: 1.25em;
 }
 header {
   border-bottom: $layout-border;
