--- a/app/assets/stylesheets/application/resume.css.scss
+++ b/app/assets/stylesheets/application/resume.css.scss
@@ -24,6 +24,7 @@
       width: 100%;
     }
     .time {
+      color: grey;
       text-align: left;
     }
   }
